feat: recap + away summary with tiered prompt caching and scenario models
Migrate the /recap command and the away-summary trigger to the 2.1.236
logic (JXn shared execution over the recent conversation, the fixed
40-word recap prompt, the 400-char word-boundary cap, the et0/hQg turn
gates, the first-three disable hint, and the focus/blur-driven trigger),
then classify every non-main-loop model call into three prompt-cache
tiers and fix the billing of each:

- ONE_SHOT scenarios drop their cache_control markers entirely — the
  prefix is never replayed, so the marker was a pure 25% write premium
  (236 $ae/j2t/cme parity).
- FORKED_PREFIX scenarios (compact, away summary, agent summary) keep
  the conversation prefix cacheable and skip the marker only on the
  appended one-shot prompt (236 cacheSafeParams + skipCacheWrite).
- MAIN_LOOP scenarios (auto-mode classifier, the model_validation probe)
  keep full caching; a released 197 wire snapshot proves the markers.

The classification is recorded as @CacheTier annotations, and the
ONE_SHOT scenarios gain per-scenario model overrides through settings:
titles, rename, and tool summaries narrow the sideQueryModel chain;
the permission explainer, hook evaluators, and insights override the
released main-model/Opus resolutions without falling into the
small-fast chain. Forked-prefix scenarios deliberately get no model
keys: a model differing from the main loop forfeits the prefix
cache-read discount.

Also clears the pre-existing pmdStrict drift the commit-time gate had
been failing on (Strings.CS/CI idioms, List#getFirst, Locale.ROOT, one
unused parameter) so preCommitQuality returns to green.

docs/prompt-cache-tiers.md documents the three tiers, the ASCII model,
and every settings key.